split cpp to hpp+testing cpp - part 1

--- a/tex/contents/math/section.tex
+++ b/tex/contents/math/section.tex
@@ -1,14 +1,14 @@
 \section{Mathematics}
 \subsection{Data structure}
 \setcurrentdir{math/ds}
-\cpp[70][123]{Modulo}{modint.cpp}
+\cpp{Modulo}{modint.hpp}
 \cpp{BigInteger}{bigint.cpp}
 
 \subsection{Number Theory}
 \setcurrentdir{math/numbertheory}
-\cpp[73][103]{Mildly-optimized sieve(Factorable)}{eratos_factorable.cpp}
-\cpp[73][106]{Primality check}{millerrabin.cpp}
-\cpp[107][132]{Prime factorization}{pollardrho.cpp}
+\cpp{Mildly-optimized sieve(Factorable)}{eratos_factorable.cpp}
+\cpp{Primality check}{millerrabin.hpp}
+\cpp{Prime factorization}{pollardrho.hpp} 
 
 \subsection{Numerical}
 \setcurrentdir{math/numerical}
