--- a/tex/contents/miscellanous/section.tex
+++ b/tex/contents/miscellanous/section.tex
@@ -2,4 +2,4 @@
 \setcurrentdir{miscellanous}
 
 \othercodes{Commands on Shell}{bash}{command.sh}
-\cpp{Template}{template.cpp}
+\cpp{Template}{template.hpp}
