--- a/tex/main.tex
+++ b/tex/main.tex
@@ -9,6 +9,6 @@
 
         \input{contents/miscellanous/section.tex}
         \input{contents/math/section.tex}
-        \input{contents/others.tex}
+        % \input{contents/others.tex}
     \end{multicols*}    
 \end{document}
