continue to restructure

--- a/tex/contents/math/section.tex
+++ b/tex/contents/math/section.tex
@@ -13,4 +13,4 @@
 \subsection{Numerical}
 \setcurrentdir{math/numerical}
 \cpp[75][133]{FFT}{fft.cpp}
-\cpp[129][172]{NTT}{ntt.cpp}
+\cpp{NTT}{ntt.hpp}
