bigint + hash + spfa

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper]{hesllnotebook}
 \setteamname{HUS.HAD}
 \setteamuni{Hanoi University of Science}
-\setteamlogo{hus.png} 
+\setteamlogo{hus.png}
 \begin{document}
     \maketitle
     \begin{multicols*}{3}
@@ -9,6 +9,8 @@
 
         \input{contents/miscellanous/section.tex}
         \input{contents/math/section.tex}
+        \input{contents/string/section.tex}
+        \input{contents/graph/section.tex}
         % \input{contents/others.tex}
-    \end{multicols*}    
+    \end{multicols*}
 \end{document}
