add gauss + ps segtree and reformat

--- a/tex/contents/math/section.tex
+++ b/tex/contents/math/section.tex
@@ -8,7 +8,8 @@
 \setcurrentdir{math/numbertheory}
 \cpp[3]{Mildly-optimized sieve(Factorable)}{eratos_factorable.cpp}
 \cpp[3]{Primality check}{millerrabin.hpp}
-\cpp{Prime factorization}{pollardrho.hpp} 
+\cpp{Prime factorization}{pollardrho.hpp}
+\cpp{Gauss}{gauss.hpp}
 
 \subsection{Numerical}
 \setcurrentdir{math/numerical}
@@ -16,7 +17,7 @@
 \cpp{NTT}{ntt.hpp}[
 	$k$-th root of unity, mod $p$: $\omega_k$ satisfies
 	$\begin{cases}
-		\omega_k^k \equiv 1 & \\ 
+		\omega_k^k \equiv 1 & \\
 		\omega_k^i \not\equiv \omega_k^j & (i \not\equiv j)
 	\end{cases}$\\
 	$p=c \times 2^k+1 \Rightarrow w_{2^k}=g^c$ w/ any $g: \gcd(g, p)=1$\\
