--- a/tex/main.tex
+++ b/tex/main.tex
@@ -10,6 +10,7 @@
         \input{contents/miscellanous/section.tex}
         \input{contents/math/section.tex}
         \input{contents/string/section.tex}
+        \input{contents/ds/section.tex}
         \input{contents/graph/section.tex}
         % \input{contents/others.tex}
     \end{multicols*}
